fix bug chart z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,6 +42,10 @@
   border-top: 3px solid orange;
 }
 
+.card-chart{
+  z-index: 2;
+}
+
 .modal-paper{
   background-color: #193142;
   color: white;
